fix dark mode color

--- a/assets/sass/_theme/sections/events/single.sass
+++ b/assets/sass/_theme/sections/events/single.sass
@@ -186,7 +186,7 @@
                     @include meta
                     width: columns(12)
                 .dropdown-calendar
-                    background: $color-background-alt
+                    background: var(--color-background-alt)
                     border-radius: var(--btn-border-radius)
                     padding: space(2) space(3)
                     width: auto
